recommender-wrapper/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forest-recommender-api-service
spec:
  type: NodePort
  ports:
    - name: default
      port: 80
      targetPort: 9001
      protocol: TCP
  selector:
    app.kubernetes.io/name: forest-recommender-api
